# CMakeList.txt : CMake project for lab2, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (classwork "main.cpp" "main.h" "vehicle.cpp" "vehicle.h")

# TODO: Add tests and install targets if needed.
