cmake_minimum_required (VERSION 3.8)

add_executable (classwork "main.cpp" "main.h")
add_executable (containers "containers.cpp")
add_executable (newdemo "newdemo.cpp" "newdemo.h")
add_executable (vehicles "vehicle.cpp" "vehicle.h")
add_executable (memarith "memarith.cpp" "memarith.h")
add_executable (tree "tree.cpp")

# TODO: Add tests and install targets if needed.
